  Each log message then produces a seperate line with JSON-encoded log data,
  which can be consumed by applications.

* added option `--log.process` to toggle the logging of the process id
  (pid) in log messages. Logging the process id is useless when running
  arangod in Docker containers, as the pid will always be 1. So one may
  as well turn it off in these contexts.

* Allow for faster cluster shutdown. This should reduce the number of shutdown
  hangers in case the agents are stopped already and then coordinators or
  DB-Servers are shut down.

* Fixed issue ES-598. Web UI now shows correct permissions in case wildcard
  database level and wildcard collection level permissions are both set.

* Fixed non-deterministic test failure in Pregel WCC test.

* Fixed unintentional connection re-use for cluster-internal communications.

* Fixed problem with newer replication protocol and ArangoSearch which could
  lead to server crashes during normal operation.

* Fixed bad behavior that led to unnecessary additional revision tree rebuilding
  on server restart.
  
* Allow AQL queries on DB-Servers again. This is not an official supported
  feature, but is sometimes used for debugging. Previous changes made it 
  impossible to run a query on a local shard.

* Fix restoring old arangodumps from ArangoDB 3.3 and before, which had index
  information stored in slightly different places in the dump.

* Fix invalid calls to `AgencyCommResult::slice()` method, which must only be
  made in case of an agency result was retrieved successfully. In case the call
  to the agency was not successful, `slice()` must not be called on it. This
  change makes sure this invariant holds true.

* Fix internal test helper function `removeCost` to really remove costs.

* Fix potential AQL query shutdown hanger.

* Use smarter default value preset in web UI for replication factor in case
  there are constraints established for the replication factor by the