@@ -57,6 +57,7 @@ class LogBufferFeature final : public application_features::ApplicationFeature {
   explicit LogBufferFeature(application_features::ApplicationServer& server);
   ~LogBufferFeature() = default;
 
+  void collectOptions(std::shared_ptr<options::ProgramOptions>) override final;
   void prepare() override;
 
   /// @brief return all buffered log entries
@@ -64,6 +65,7 @@ class LogBufferFeature final : public application_features::ApplicationFeature {
 
  private:
   std::shared_ptr<LogAppender> _inMemoryAppender;
+  bool _useInMemoryAppender;
 };
 
 }  // namespace arangodb
